# c-client-sdk

./: .clang-format  .gitignore  Android.bp  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  DOCS.md  DOCS.txt  Doxyfile  Makefile  Makefile.win  README  README.md  annotated.html  annotated_dup.js  api_8h.html  api_8h__dep__incl.dot  api_8h__dep__incl.md5  api_8h__incl.dot  api_8h__incl.md5  api_8h_source.html  api_8hpp.html  api_8hpp__incl.dot  api_8hpp__incl.md5  api_8hpp_source.html  azure-pipelines.yml  base64.c  boolean_8h.html  boolean_8h.js  boolean_8h__dep__incl.dot  boolean_8h__dep__incl.md5  boolean_8h_source.html  classLDClientCPP.html  classLDClientCPP.js  classes.html  classlaunchdarkly_1_1Array.html  classlaunchdarkly_1_1Array.js  classlaunchdarkly_1_1Object.js  classlaunchdarkly_1_1Value.html  (+137 more)
.circleci/: config.yml
.ldrelease/: build.ps1  build.sh  config.yml  helpers.psm1  linux-build-docs.sh  linux-build.sh  mac-build-docs.sh  mac-build.sh  mac-prepare.sh  publish.ps1  publish.sh  test.ps1  test.sh  update-version.sh
attribution/: CMakeHelpers.txt
benchmarks/: benchmark-bool-variation.c
c-sdk-common/: CMakeLists.txt  README.md
c-sdk-common/.circleci/: config.yml
c-sdk-common/include/launchdarkly/: boolean.h  export.h  json.h  logging.h
c-sdk-common/include/launchdarkly/experimental/cpp/: value.hpp
c-sdk-common/scripts/: build.ps1  test.ps1
c-sdk-common/src/: assertion.h  cJSON.c  concurrency.c  concurrency.h  json.c  ldtime.c  ldtime.h  logging.c  logging.h  memory.c  sse.c  sse.h  user.c  user.h  utility.c  utility.h
c-sdk-common/test-utils/include/test-utils/: http_server.h
c-sdk-common/test-utils/src/: http_server.c
c-sdk-common/tests/: CMakeLists.txt  commonfixture.cpp  test-logging.c  test-platform.c  test-sse.c  test-time.cpp  test-user.c  test-user.cpp
contract-tests/: CMakeLists.txt  README.md  main.cpp  suppressions.txt
contract-tests/include/definitions/: definitions.hpp
contract-tests/include/helpers/: http_helpers.hpp
contract-tests/include/service/: client_entity.hpp  service.hpp
contract-tests/src/: client_entity.cpp  definitions.cpp  http_helpers.cpp  service.cpp
cpp/: Makefile  api.cpp  ldcpp.cpp  testcpp.cpp
cpp/include/launchdarkly/: api.hpp
docs/: Makefile  mainpage.md
include/: ldapi.h
include/launchdarkly/: api.h  boolean.h  client.h  config.h  export.h  json.h  memory.h  user.h
include/launchdarkly/experimental/: README.md  ldvalue.h
scripts/: build.ps1  release-docs.sh  test.ps1
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+17 more)
src/: cJSON.h  client.c  client.h  concurrency.c  config.c  config.h  event_processor.c  event_processor.h  event_processor_internal.h  flag.c  flag.h  flag_change_listener.c  flag_change_listener.h  json.c  ldclient.c  ldevents.c  ldhash.c  ldinternal.h  ldlog.c  ldnet.c  ldstore.c  ldthreads.c  ldtime.h  lduser.c  ldutil.c  ldvalue.c  logging.h  memory.c  memory.h  reference_count.c  reference_count.h  socket.c  socket.h  store.c  store.h  user.c  user.h  utility.c  utility.h
test-utils/include/test-utils/: http_server.h
tests/: CMakeLists.txt  LD-features-fileuser.txt  callback-spy.cpp  callback-spy.hpp  commonfixture.cpp  commonfixture.h  test-all-flags.c  test-all-flags.cpp  test-client.c  test-client.cpp  test-config.c  test-config.cpp  test-events.c  test-events.cpp  test-flag-listener.cpp  test-flag.c  test-flag.cpp  test-hooks.c  test-hooks.cpp  test-ldvalue.cpp  test-logging.cpp  test-misc.c  test-misc.cpp  test-mock.c  test-mock.cpp  test-multienv.c  test-multienv.cpp  test-platform.c  test-platform.cpp  test-socket.cpp  test-sse-events.cpp  test-sse.cpp  test-store.c  test-store.cpp  test-user.c  test-userencoding.c  test-variations.c  test-variations.cpp
unit-tests/: LD-features-fileuser.txt  Makefile  test-custom.c  test-deviceid.c  test-events.c  test-filer.c  test-hooks.c  test-misc.c  test-platform.c  test-private-attr.c  test-store.c  test-userencoding.c
